# Nexus-autonomous-infrastructure-orchestrator

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  go.work
.github/workflows/: ci.yml
adapters/edge/modules/: README.md
adapters/k8s/: go.mod  go.sum
adapters/k8s/cmd/adapter/: main.go  main_test.go
api/proto/orchestrator/v1/: orchestrator.proto
config/: example.yaml
crates/agent-chaos/: Cargo.toml
crates/agent-chaos/src/: main.rs
crates/agent-common/: Cargo.toml
crates/agent-common/src/: lib.rs
crates/agent-executor/: Cargo.toml
crates/agent-executor/src/: main.rs
crates/agent-planner/: Cargo.toml
crates/agent-planner/src/: main.rs
crates/agent-scout/: Cargo.toml
crates/agent-scout/src/: main.rs
crates/agent-sentinel/: Cargo.toml
crates/agent-sentinel/src/: main.rs
crates/bare-metal-adapter/: Cargo.toml
crates/bare-metal-adapter/src/: lib.rs
crates/cloud-adapter/: Cargo.toml
crates/cloud-adapter/src/: lib.rs
crates/edge-adapter/: Cargo.toml
crates/edge-adapter/src/: lib.rs
crates/goal-engine/: Cargo.toml
crates/goal-engine/src/: intent.rs  lib.rs  resolver.rs
crates/nexus-core/: Cargo.toml
crates/nexus-core/src/: api.rs  config.rs  feedback.rs  main.rs  orchestrator.rs
crates/orchestrator-api/: Cargo.toml
crates/orchestrator-api/src/: lib.rs
crates/state-store/: Cargo.toml
crates/state-store/src/: crdt.rs  lib.rs  raft.rs
crates/symphony-bridge/: Cargo.toml
crates/symphony-bridge/src/: main.rs
deploy/docker/: Dockerfile.k8s-adapter  Dockerfile.nexus-core  Dockerfile.symphony
deploy/helm/nexus/: Chart.yaml  values-production.yaml  values.yaml
deploy/helm/nexus/templates/: deployment.yaml
deploy/kubernetes/: namespace.yaml
docs/: agents.md  architecture.md  getting-started.md
observability/anomaly-scorer/: Dockerfile  README.md  pyproject.toml
observability/anomaly-scorer/src/nexus_anomaly_scorer/: __init__.py  main.py
observability/anomaly-scorer/tests/: test_scorer.py
observability/ebpf-probes/: Makefile  README.md
observability/ebpf-probes/probes/: nexus_latency.bpf.c
observability/event-bus/: nats-streams.json
observability/metrics-pipeline/: otel-collector.yaml  prometheus.yml
scripts/: run-all-agents.ps1  run-all-agents.sh  run-symphony.ps1  run-symphony.sh
symphony/: README.md
symphony/web/: index.html
symphony/web/css/: symphony.css
symphony/web/js/: app.js  audio.js  viz.js
