[workspace]
resolver = "2"
members = [
    "crates/nexus-core",
    "crates/goal-engine",
    "crates/state-store",
    "crates/agent-common",
    "crates/agent-scout",
    "crates/agent-sentinel",
    "crates/agent-planner",
    "crates/agent-executor",
    "crates/agent-chaos",
    "crates/cloud-adapter",
    "crates/bare-metal-adapter",
    "crates/edge-adapter",
    "crates/orchestrator-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/your-org/nexus-orchestrator"
authors = ["Nexus Orchestrator Contributors"]

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
async-nats = "0.37"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.14"
cranelift-wasm = "0.112"
wasmtime = "27.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
