[package]
name = "agent-planner"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent-planner"
path = "src/main.rs"

[dependencies]
agent-common = { path = "../agent-common" }
orchestrator-api = { path = "../orchestrator-api" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
futures-util = "0.3"
