[package]
name = "agent-sentinel"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent-sentinel"
path = "src/main.rs"

[dependencies]
agent-common = { path = "../agent-common" }
orchestrator-api = { path = "../orchestrator-api" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
