[package]
name = "nexus-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nexus-core"
path = "src/main.rs"

[dependencies]
orchestrator-api = { path = "../orchestrator-api" }
goal-engine = { path = "../goal-engine" }
state-store = { path = "../state-store" }
agent-common = { path = "../agent-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
uuid = { workspace = true }
chrono = { workspace = true }
async-nats = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
